--- a/app/templates/index.njk
+++ b/app/templates/index.njk
@@ -83,7 +83,7 @@
         {% endif %}
 
         {% if errorReason and errorReason == "CAPTURE-ISSUE" %}
-        <p>An issue occured during the capture process itself. Please try again later.</p>
+        <p>An issue occurred during the capture process itself. Please try again later.</p>
         {% endif %}
 
         <button>Ok</button>
