--- a/app/templates/modules/footer.njk
+++ b/app/templates/modules/footer.njk
@@ -7,7 +7,7 @@
   
   <p>This site is an experiment of the <a href="https://lil.law.harvard.edu">Harvard Library Innovation Lab</a>.</p>
 
-  <p><a href="https://twitter.com/harvardlil">@harvardlil</a> on Twitter - <a href="https://law.us3.list-manage.com/subscribe?u=4290964398813d739f2398db0&amp;id=e097736c6f">Subscribe to our Newsletter</a>.</p>
+  <p><a href="https://twitter.com/harvardlil">@harvardlil</a> on Twitter - <a href="https://ocb.to/lawvocado">Subscribe to our Newsletter</a>.</p>
 
   <p>contact: <a href="mailto:info@perma.cc">info@perma.cc</a></p>
 </footer>
